--- a/Chippai/Chippai-Info.plist
+++ b/Chippai/Chippai-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>Chippai</string>
 	<key>CFBundleIdentifier</key>
 	<string>jp.hachune.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
